force-app/main/default/objects/EnvelopeInfo__c/EnvelopeInfo__c.object-meta.xml
<CustomObject>
    <label>EnvelopeInfo</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>EnvelopeInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EnvelopeInfo</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>