force-app/main/default/objects/EnvelopeInfo__c/fields/Actual_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Actual_File_Name__c</fullName>
    <label>Actual File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>