force-app/main/default/objects/EnvelopeInfo__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id__c</fullName>
    <label>Attachment_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>