force-app/main/default/objects/EnvelopeInfo__c/fields/batchInstanceId__c.field-meta.xml
<CustomField>
    <fullName>batchInstanceId__c</fullName>
    <label>batchInstanceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>