force-app/main/default/objects/EnvelopeInfo__c/fields/Certificate_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Attachment_Id__c</fullName>
    <label>Certificate Attachment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>