force-app/main/default/objects/EnvelopeInfo__c/fields/Docusign_API_Status__c.field-meta.xml
<CustomField>
    <fullName>Docusign_API_Status__c</fullName>
    <label>Docusign API Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>