force-app/main/default/objects/EnvelopeInfo__c/fields/DocuSign_Instructional_text_to_innovator__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Instructional_text_to_innovator__c</fullName>
    <label>DocuSign_Instructional_text_to_innovator</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>