force-app/main/default/objects/EnvelopeInfo__c/fields/DownloadStatus__c.field-meta.xml
<CustomField>
    <fullName>DownloadStatus__c</fullName>
    <label>DownloadStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>