force-app/main/default/objects/EnvelopeInfo__c/fields/Error_Count_on_Fetch_Status__c.field-meta.xml
<CustomField>
    <fullName>Error_Count_on_Fetch_Status__c</fullName>
    <label>Error_Count_on_Fetch_Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>