force-app/main/default/objects/EnvelopeInfo__c/fields/Error_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Error_Occurred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error_Occurred</label>
    <type>Checkbox</type>
</CustomField>