force-app/main/default/objects/EnvelopeInfo__c/fields/Error_on_Status_Fetch__c.field-meta.xml
<CustomField>
    <fullName>Error_on_Status_Fetch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error_on_Status_Fetch</label>
    <type>Checkbox</type>
</CustomField>