force-app/main/default/objects/EnvelopeInfo__c/fields/Error_Text__c.field-meta.xml
<CustomField>
    <fullName>Error_Text__c</fullName>
    <label>Error_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>