force-app/main/default/objects/EnvelopeInfo__c/fields/Error_Text_on_Status_Fetch__c.field-meta.xml
<CustomField>
    <fullName>Error_Text_on_Status_Fetch__c</fullName>
    <label>Error_Text_on_Status_Fetch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>