force-app/main/default/objects/EnvelopeInfo__c/fields/Is_Reciever__c.field-meta.xml
<CustomField>
    <fullName>Is_Reciever__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReciever?</label>
    <type>Checkbox</type>
</CustomField>