force-app/main/default/objects/EnvelopeInfo__c/fields/IsBatchUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsBatchUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBatchUpdated</label>
    <type>Checkbox</type>
</CustomField>