force-app/main/default/objects/EnvelopeInfo__c/fields/IsRecipients__c.field-meta.xml
<CustomField>
    <fullName>IsRecipients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRecipients</label>
    <type>Checkbox</type>
</CustomField>