force-app/main/default/objects/EnvelopeInfo__c/fields/IsRecipients_Configured__c.field-meta.xml
<CustomField>
    <fullName>IsRecipients_Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRecipientsConfigured?</label>
    <type>Checkbox</type>
</CustomField>