force-app/main/default/objects/EnvelopeInfo__c/fields/IsReminder_Set__c.field-meta.xml
<CustomField>
    <fullName>IsReminder_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReminderSet?</label>
    <type>Checkbox</type>
</CustomField>