force-app/main/default/objects/EnvelopeInfo__c/fields/ReqStatus__c.field-meta.xml
<CustomField>
    <fullName>ReqStatus__c</fullName>
    <label>ReqStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>