force-app/main/default/objects/EnvelopeInfo__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <label>ResponseBody</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>