force-app/main/default/objects/EnvelopeInfo__c/fields/Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Sent_On__c</fullName>
    <label>Sent On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>