force-app/main/default/objects/EnvelopeInfo__c/fields/SignedAssignment__c.field-meta.xml
<CustomField>
    <fullName>SignedAssignment__c</fullName>
    <label>SignedAssignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>