force-app/main/default/objects/EnvelopeInfo__c/fields/SignedOathDeclaration__c.field-meta.xml
<CustomField>
    <fullName>SignedOathDeclaration__c</fullName>
    <label>SignedOathDeclaration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>