force-app/main/default/objects/EnvelopeInfo__c/fields/Status_Fetched_on__c.field-meta.xml
<CustomField>
    <fullName>Status_Fetched_on__c</fullName>
    <label>Status Fetched on</label>
    <type>DateTime</type>
</CustomField>